Fix nav alignment, hover response

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,9 +4,12 @@
     --black: #02020B;
     --red: #B50E0E;
     --gold: #F0CA00;
+    background-color: var(--gold);
 }
 
 body {
+    width: 960px;
+    margin: auto;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: black;
     background-color: var(--light-gray);
@@ -17,14 +20,21 @@ body {
 
 /* Header region */
 .header-content {
-width: 100%;
-height: 150px;
-background-color: var(--red);
-border-style: none;
+    width: 100%;
+    height: 200px;
+    background-color: var(--red);
+    border-style: none;
 }
 
+/* Solve nav alignment using https://www.w3schools.com/howto/howto_css_topnav_right.asp */
+
+nav {
+    background-color: var(--red);
+    overflow: hidden;
+}
 .name {
-    margin: 0px;
+    margin: 10px 0 10px 0;
+    padding: 0 10px;
     font-size: 3em;
     color: var(--red);
     background-color: var(--gold);
@@ -32,30 +42,43 @@ border-style: none;
 }
 
 .subtitle {
-font-size: 2em;
-clear: both;
-color: var(--red);
-background-color: var(--gold);
-float: right;
+    clear: both;
+    float: right;
+    padding: 0 10px;
+    margin-bottom: -20px;
+    font-size: 2em;
+    color: var(--red);
+    background-color: var(--gold);
 }
 
 .nav-links {
-font-size: 2em;
-color: var(--light-gray);
-list-style: none;
-display: flex;
-flex-direction: row;
-float: right;
+    font-size: 2em;
+    color: var(--light-gray);
+    list-style: none;
+    float: right;
+
 }
 
 .nav-links li {
-padding: 5px 10px;
+    display: inline-block;
+    margin: 0 20px;
+    padding: 5px 5px;
+}
+
+.nav-links a {
+    text-decoration: none;
+    color: var(--gold);
+}
+
+a:hover {
+    text-decoration: underline;
+    text-decoration-color: var(--gold);
 }
 
 /*  Main content region */
 
 .main-content {
-margin: 20px;
+    margin: 20px;
 }
 
 .section-header {
@@ -72,9 +95,16 @@ div[style^='background-image'] {
     /* background-image is not set here... */
   }
   
+.portfolio-item {
 
+}
 .portfolio-item-name {
-
+    background-color: var(--gold);
+    color: var(--red);
+    width: fit-content;
+    position: relative;
+    margin-bottom: 20px;
+    padding: 10px;
 }
 
 .portfolio-tools {
